--- a/dayFour-6-11-2021/header and footer only page/shoesWebPage1.css
+++ b/dayFour-6-11-2021/header and footer only page/shoesWebPage1.css
@@ -44,6 +44,7 @@
 }
 
 .head-col2 h1{
+font-size: 30px;
   font-weight: bold;
   letter-spacing: 2px;
 }
@@ -237,6 +238,10 @@ justify-content: space-between;
 .head-col3{
   flex: .5;
 }
+.head-col2 h1{
+    font-size: 25px;
+    
+  }
    
 
 /* <!-- -----------newsletter---------- --> */
@@ -323,7 +328,10 @@ justify-content: space-between;
 .head-col3{
     flex: .4;
 }
-   
+.head-col2 h1{
+    font-size: 20px;
+    
+  }  
 
 
 /* <!-- -----------newsletter---------- --> */
