--- a/dayFour-6-11-2021/header and footer only page/shoesWebPage1.css
+++ b/dayFour-6-11-2021/header and footer only page/shoesWebPage1.css
@@ -9,30 +9,33 @@
 /* ----------header----------- */
 
 .head-nav{
-   height: 80px;
-   width: 100%;
-   display: flex;
-   background-color: rgb(56, 83, 216);
-   color: rgb(255, 255, 255);
-   justify-content:space-between;
-   align-items: center;
-   
-   border: 1px solid rgb(74, 109, 227);
+    background-color: rgb(56, 83, 216);
+    color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid rgb(74, 109, 227);
 }
-
-
 .head-col1{
     display: flex;
-    flex: .4;
+}
+.head-col1 i{
+    border-right: 1px solid rgb(74, 109, 227);
+    padding: 20px;
 }
 
-.head-col1 i{
-    flex: .15;
-    margin-left: 10px;
-}
-.head-col1-2{
+.head-col1-2 {
     display: flex;
-    flex: .85;
+}
+.head-col1-2 i:nth-child(1){
+    padding-right: 8px;
+    border-right: none;
+}
+
+.head-col1-2-p{
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid rgb(74, 109, 227);
 }
 .head-col1-2-p p:nth-child(1){
     font-size: 8px;
@@ -41,25 +44,24 @@
 .head-col1-2-p p:nth-child(2){
     font-size: 10px;
     letter-spacing: 3px;
+    font-weight: bold;
 }
-
 .head-col2 h1{
-font-size: 30px;
-  font-weight: bold;
-  letter-spacing: 2px;
+    padding: 12px;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .head-col3{
-   display: flex;
-   flex-direction: row-reverse;
-   flex: .4;
-
+    display: flex;
+    flex-direction: row-reverse;
+  
 }
 .head-col3 i{
-    flex: .1;
+    padding: 20px;
+    border-left: 1px solid rgb(74, 109, 227);
 }
-
-
 
 /* <!-- -----------main body---------- --> */
 main{
@@ -232,16 +234,30 @@ justify-content: space-between;
 {
 
 /* ----------header----------- */
-.head-col1{
-  flex: .5;
-}    
-.head-col3{
-  flex: .5;
+.head-col1 i{padding: 15px;
+}
+.head-col1-2 i:nth-child(1){
+    padding-right: 12px;
+}
+.head-col1-2-p{
+    padding: 14px;
+}
+.head-col1-2-p p:nth-child(1){
+    font-size: 7px;
+    letter-spacing: 2px;
+}
+.head-col1-2-p p:nth-child(2){
+    font-size: 7px;
+    letter-spacing: 2px;
 }
 .head-col2 h1{
-    font-size: 25px;
-    
-  }
+    padding: 10px;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+.head-col3 i{
+    padding: 15px;
+}
    
 
 /* <!-- -----------newsletter---------- --> */
@@ -318,20 +334,25 @@ justify-content: space-between;
 @media screen and ( max-width: 500px)
 {
 
- /* ----------header----------- */
-.head-col1{
-    flex: .4;
-}    
-.head-col1-2 p{
+
+/* ----------header----------- */
+.head-col1 i{
+    padding: 12px;
+}
+.head-col1-2 i:nth-child(1){
+    border-right: 1px solid rgb(74, 109, 227);
+}
+.head-col1-2-p{
     display: none;
 }
-.head-col3{
-    flex: .4;
-}
 .head-col2 h1{
-    font-size: 20px;
-    
-  }  
+    padding: 8px;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+.head-col3 i{
+    padding: 12px;
+}
 
 
 /* <!-- -----------newsletter---------- --> */
