--- a/dayFive(register and login page with js and local storage)/registerPage.css
+++ b/dayFive(register and login page with js and local storage)/registerPage.css
@@ -25,35 +25,42 @@ body{
 
 
 .card{
-    width: 30%;
+    width: 40%;
     background-color: white;
     display: flex;
     flex-direction: column;
-    margin:6rem  auto;
+    margin:4rem  auto;
     text-align: center;
+    color: rgb(117, 117, 117);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .email input,.password input{
 width: 80%;
 padding:15px;
-margin-top: 25px;
 background-color: rgb(242, 242, 242);
 border-style: none;
-color: rgb(151, 109, 109);
 
 }
-.password i{
-    margin-left: -30px; 
-    cursor: pointer;
+.email input{
+    margin-top:50px ;
 }
 .password input{
-    margin-right: 8px;
+    margin-top: 25px;
+}
+.password i{
+    margin-left: -35px; 
+    cursor: pointer;
+}
+.password {
+    transform: translateX(-7px);
 }
 
 .helper-text{
+    width: 80%;
 font-size: 10px;
 display: flex;
 flex-direction: column;
-margin: 25px 0 0 50px;
+margin: 25px 0 0 60px;
 }
 .helper-text li{
   list-style: none;
@@ -69,11 +76,22 @@ margin: 25px 0 0 50px;
     border-style: none;
 }
 .text{
-    margin: 25px 0;
+    margin: 25px 0 50px 0;
+    width: 80%;
+    align-self: center;
 }
 .text a{
     color: rgb(255, 150, 21);
 }
 .nav li a:hover,.text a:hover{
     color: green;
+}
+
+
+@media screen and (max-width:900px){
+    
+    .card{
+        width:60%; 
+    }
+
 }
