--- a/daySix(Weather app using open weather api)/weatherApp.css
+++ b/daySix(Weather app using open weather api)/weatherApp.css
@@ -4,61 +4,68 @@
     box-sizing: border-box;
   }
   
-  body{
-    font-family: "Nunito",sans-serif;
-    background: #f8f8f8;
+body{
+  font-family: 'Nanum Myeongjo', serif;
+    background: linear-gradient( 180deg,#36d1dc 0%,#5b86e5 100%);
+    height: 95vh;
+    
   }
-  
-  .input{
+
+.input{
+  width: 100%;
     text-align: center;
-    margin: 100px auto;
-  }
-  
-  input[type="submit"]{
-    padding: 15px 30px;
-    background: #e7e7e7;
-    border: none;
-    border-radius: 1px;
-    font-family: "Nunito",sans-serif;
-    font-weight:bold;
-    font-size: 20px;
-  }
-  
-  .input input[type="text"]{
-    width: 600px;
-    height: 55px;
-    padding: 5px 10px;
-    background: #e7e7e7;
-    border: none;
-    border-radius: 1px;
-    font-family: "Nunito",sans-serif;
-    font-weight:bold;
-    font-size: 20px;
-  }
-  
-  .card{
-    width: 50%;
-    background: #e7e7e7;
-    height: 40vh;
     margin: 50px auto;
-    border-radius: 2px;
   }
+.input input{
+  padding: 20px;
+  width: 40%;
+  border-radius: 20px ;
+  border-style: none;
+} 
   
-  
-  .close{
-    float: right;
-    margin-top: -2px;
-    cursor: pointer;
-    margin-right: 20px;
-  }
-  
-  .card h1{
-    padding: 5px 0;
-    text-align: center;
-  }
-  
-  .card p{
-    text-align: center;
-    margin:40px 0;
-    font-size:20px;
-  }
+.input button{
+  padding: 20px;
+  width: 10%;
+  border-radius: 20px ;
+  border-style: none;
+} 
+
+.input button:hover{
+  background-color:rgb(217, 217, 217) ;
+}
+.display{
+  text-align: center;
+}
+#name{
+  color: #fff;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+#temp{
+  color: #fff;
+  font-size: 2rem;
+}
+
+#desc{
+ font-size: 20px;
+ color: #fff;
+}
+#tempIcon{
+  margin: 2rem;
+  width: 20%;
+  height: auto;
+}
+body.sunny {
+  background-image: linear-gradient(to right top, #ff4e50, #ff713e, #ff932b, #ffb41d, #f9d423);
+}
+body.cloudy {
+  background-image: linear-gradient(to right top, #63747c, #71858e, #7f96a0, #8da8b2, #9bbac5);
+}
+body.rainy {
+  background-image: linear-gradient(to right top, #637c7b, #718e8c, #7ea09e, #8db2b0, #9bc5c3);
+}
+
+
+
+
+
