fetch with async await in weather app

--- a/daySix(Weather app using open weather api)/weatherApp.css
+++ b/daySix(Weather app using open weather api)/weatherApp.css
@@ -44,11 +44,13 @@ body{
 #temp{
   color: #fff;
   font-size: 2rem;
+  text-transform: capitalize;
 }
 
 #desc{
  font-size: 20px;
  color: #fff;
+ text-transform: capitalize;
 }
 #tempIcon{
   margin: 2rem;
